[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://asdfsdf.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.8546, 32.0291 )

[node name="Enemy" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
screenSize = Vector2( 1024, 600 )
speed = 5
bullet = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 0.320206, -36.0919 )
scale = Vector2( 0.0866579, 0.0866579 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Gun" type="Position2D" parent="." index="2"]

position = Vector2( -40, 0 )
_sections_unfolded = [ "Transform" ]

[node name="ChangeMovementTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="BulletSponge" type="Node2D" parent="." index="4"]

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]

[connection signal="shoot" from="." to="." method="_on_Enemy_shoot"]

[connection signal="timeout" from="ChangeMovementTimer" to="." method="_on_ChangeMovementTimer_timeout"]


